--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "experimenting with puppeteer",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "debug": "nodemon --inspect=0.0.0.0:9229 --trace-warnings loader.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,16 @@
   },
   "homepage": "https://github.com/Plamen5kov/blue-stahli-#readme",
   "dependencies": {
-    "puppeteer": "^14.1.1"
+    "puppeteer": "^14.1.1",
+    "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.2.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.19.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.0",
+    "nodemon": "^2.0.15"
   }
 }
