--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,5 @@
 FROM alekzonder/puppeteer:1
-WORKDIR /usr/src/app
+WORKDIR /app
 
 COPY ["package.json", "package-lock.json*", "./"]
 USER root
@@ -7,4 +7,4 @@ RUN npm install --production --silent && mv node_modules ../
 COPY . .
 
 EXPOSE 5000
-RUN chown -R node /usr/src/app
+RUN chown -R node /app
